# mcp

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  bandit.yaml  main.py  pyproject.toml
core/: __init__.py  logging.py
core/config/: config-database.yaml  config-embedding-model.yaml  config-llm.yaml  database.py  settings.py
core/embeddings/: embedding.py
core/errors/: exceptions.py
core/mcp/: site_server.py
core/models/: __init__.py  ingestion.py
core/providers/: __init__.py  embedding.py  huggingface_embedding.py  llamaindex_query_engine.py  openai_embedding.py  pgvector.py  qdrant.py  query_engine.py  vector_store.py
core/services/: __init__.py  ingestion.py  mcp_server.py  reranking.py  scraper.py
core/utils/: network.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_ingestion_flow.py
tests/unit/: __init__.py  test_database_config.py  test_embedding_providers.py  test_ingestion_service.py  test_logging.py  test_main.py  test_mcp_server.py  test_models.py  test_network.py  test_openai_embedding_provider.py  test_query_engine.py  test_reranking.py  test_scraper.py  test_settings.py  test_vector_stores.py
