[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pebbling-crawl"
version = "1.0.0"
description = "A comprehensive web scraping and vector database package"
readme = "README.md"
requires-python = ">=3.10,<3.16"
dependencies = [
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "llama-index>=0.9.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "numpy>=1.24.0",
    "asyncio-throttle>=1.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "crawl4ai",
    "ruff>=0.12.10",
    "fastmcp",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "sentence-transformers>=5.1.0",
    "cohere>=5.17.0",
    "llama-index-embeddings-huggingface>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
    "bandit>=1.7.0",
    "pydocstyle>=6.1.1",
    "detect-secrets>=1.5.0",
]
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = ["py310"]
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", "build", "dist", ".venv"]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D401"]

